# VerifiMind-PEAS

./: .dockerignore  .env.example  .gitignore  .sonarcloud.properties  .zenodo.json  ALIGNMENT_REPORT_V2.0.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_CODE_DEPLOYMENT_PROMPT.md  CLAUDE_CODE_SESSION_DEPLOYMENT_V2.0.md  CODE_FOUNDATION_ANALYSIS.md  CODE_FOUNDATION_COMPLETION_SUMMARY.md  COMMERCIAL-LICENSE.md  COMPLETE_VISION.md  CONTRIBUTING.md  CREATE_APP.bat  Claude Code Alignment Protocol.md  DEMO_VIDEO_SCRIPT.md  DEVELOPMENT_TRACKER.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FIXES_APPLIED.md  GOVERNANCE.md  Genesis Master Prompt v2.0.md  Genesis_Master_Prompt.md  Genesis_Master_Prompt_v1_5.md  HOW_REFLEXION_WORKS.md  HOW_TO_SET_API_KEY.txt  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  ITERATION_JOURNEY_REPORT.md  ITERATIVE_GENERATION_GUIDE.md  LICENSE  MCP_SERVER_FEATURES.md  MCP_SETUP_GUIDE.md  MULTI_AGENT_PROTOCOL.md  QUICK_START.md  README.md  (+39 more)
mcp-server/: .dockerignore  .env.example  .gcloudignore  CUSTOM_DOMAIN_SETUP.md  DEMO.md  DEPLOYMENT_CHECKLIST_V2.0.md  DEPLOYMENT_SUCCESS.md  DEPLOY_GCP.md  DOMAIN_SETUP_GUIDE.md  Dockerfile  GODADDY_DNS_SETUP.md  MIGRATION.md  README.md  VerifiMind PEAS MCP Server - Installation Guide.md  VerifiMind PEAS MCP Server Summary.md  deploy-cloudrun.bat  deploy-cloudrun.sh  deploy-gcp.sh  http_server.py  pyproject.toml  pytest.ini  requirements.txt  smithery.yaml
mcp-server/docs/: BYOK_GUIDE.md  SECURITY_SPEC.md
mcp-server/examples/: USAGE_EXAMPLES.md  claude_desktop_config.json
mcp-server/src/verifimind_mcp/: __init__.py  config_helper.py  contract.py  pages.py  registration.py  server.py
mcp-server/src/verifimind_mcp/agents/: base_agent.py  cs_agent.py  x_agent.py  z_agent.py
mcp-server/src/verifimind_mcp/config/: standard_config.py
mcp-server/src/verifimind_mcp/coordination/: __init__.py  handoff_formatter.py  handoff_store.py
mcp-server/src/verifimind_mcp/integrations/: __init__.py  polar_client.py
mcp-server/src/verifimind_mcp/llm/: __init__.py  failover.py  provider.py
mcp-server/src/verifimind_mcp/middleware/: __init__.py  ip_blocklist.py  polar_adapter.py  rate_limiter.py  tier_gate.py
mcp-server/src/verifimind_mcp/models/: concepts.py  reasoning.py  results.py  session.py
mcp-server/src/verifimind_mcp/policies/: __init__.py  privacy_policy.py  terms.py
mcp-server/src/verifimind_mcp/reporting/: __init__.py  markdown_reporter.py
mcp-server/src/verifimind_mcp/templates/: __init__.py  export.py  import_url.py  models.py  registry.py
mcp-server/src/verifimind_mcp/utils/: __init__.py  metrics.py  reasoning_view.py  retry.py  sanitization.py  synthesis.py  token_monitor.py  trinity_history.py  uuid_helper.py  uuid_tracer.py
mcp-server/src/verifimind_mcp/webhooks/: __init__.py  polar_webhook.py
mcp-server/tests/: README.md  test_registration.py  test_registration_ui.py
mcp-server/tests/integration/: test_server_health.py  test_trinity_workflow.py
mcp-server/tests/unit/: test_p0_tool_manifest_audit.py  test_v050_foundation.py  test_v0511_coordination.py  test_v0512_polar.py  test_v0513_fortify.py  test_v0515_scholar_incentives.py  test_v0516_trinity_history.py  test_v0517_mcp_config_header.py  test_v0518_scholar_dashboard.py  test_v0519_uuid_rate_limiter.py  test_v0522_ip_blocklist.py  test_v0525_inference_mode.py  test_v0526_scanner_block_head.py  test_v0543_foundation_integrity.py  test_v0544_reasoning_visible.py  test_v0546_evidence_coercion.py  test_v0546_robustness_bundle.py  test_v0549_cidr_blocklist.py  test_v0549_groq_migration.py  test_v0550_byok_admission.py  test_v0550_resilience_fallbacks.py  test_v0550_robustness_walk.py  test_v0550_synthesis_boundaries.py  test_v0551_truth_contract.py  test_v0552_discovery_truth.py  test_v0554_honest_fallback.py
mcp-server/tests/unit/agents/: test_cs_agent.py  test_x_agent.py  test_z_agent.py
mcp-server/tests/unit/llm/: __init__.py  (+5 more)
(+363 files in other folders)
