[project]
name = "verifimind-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for VerifiMind-PEAS Genesis Methodology"
authors = [
    {name = "Alton Lee", email = "creator35lwb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "ai-validation", "genesis-methodology", "reflexion-trinity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.15.0",
    "fastmcp>=2.0.0",
    "smithery>=0.4.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "verifimind_mcp.server:create_server"

[project.urls]
Homepage = "https://github.com/creator35lwb-web/VerifiMind-PEAS"
Documentation = "https://github.com/creator35lwb-web/VerifiMind-PEAS/tree/main/mcp-server"
Repository = "https://github.com/creator35lwb-web/VerifiMind-PEAS"
Issues = "https://github.com/creator35lwb-web/VerifiMind-PEAS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
