[project]
name = "verifimind-mcp"
version = "0.1.0"
description = "Model Context Protocol server for VerifiMind-PEAS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "anthropic>=0.94.0",
    "google-generativeai>=0.3.0",
    "groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "smithery>=0.4.4",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "google-cloud-firestore>=2.26.0",
    "email-validator>=2.0.0",
    "standardwebhooks>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/verifimind_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
